fix: fix align for title in modal window for results

--- a/style.scss
+++ b/style.scss
@@ -136,6 +136,7 @@
 
   .results_title {
     padding: 0;
+    text-align: center;
     font-weight: bold;
     margin-bottom: 15px;
   }
